# sudoplz

./: .gitignore  AGENTS.md  README.md  SECURITY.md  askpass  askpass-config.json  askpass-manager  flake.nix  pyproject.toml
.github/workflows/: publish.yml
src/secure_askpass/: __init__.py  askpass.py  core.py  manager.py
src/sudoplz/: __init__.py  askpass.py  core.py  manager.py
