[project]
name = "secure-askpass"
version = "0.2.0"
description = "Secure SSH-key-encrypted askpass helper for sudo"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "keyring>=24",
]

[project.scripts]
askpass = "secure_askpass.askpass:main"
askpass-manager = "secure_askpass.manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secure_askpass"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
]
