[project]
name = "sudoplz"
version = "0.2.0"
description = "Give AI coding agents case-by-case sudo access via GUI approval, with SSH-key-encrypted password storage"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "keyring>=24",
]

[project.scripts]
askpass = "sudoplz.askpass:main"
sudoplz = "sudoplz.manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sudoplz"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
]
